--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,35 +1,62 @@
-name: Next.js CI
+name: CI/CD Deployment
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
-      - dev
+    branches: ["main"]
 
 jobs:
-  build-and-test:
-    name: Build & Test Next.js
+  build-and-deploy:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.20.4]
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout du code
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: "npm"
+          node-version: ${{ matrix.node-version }}
 
+      # 🔹 Installation des dépendances
       - name: Install dependencies
         run: npm install
 
-      - name: Run ESLint (Linting)
+      # 🔹 Linter (optionnel)
+      - name: Run ESLint
         run: npm run lint
 
-      - name: Build Next.js
+      # 🔹 Build Next.js
+      - name: Build application
         run: npm run build
+
+      # 🔹 Déploiement via SCP
+      - name: Deploy application via SCP
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          source: ".next/, package.json, package-lock.json, public/, .env"
+          target: "/home/nas/portfolio"
+          strip_components: 1
+
+      # 🔹 Redémarrer l'application avec PM2
+      - name: Restart application with PM2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            cd /home/nas/portfolio
+            npm install --omit=dev  
+            pm2 delete portfolio || true  
+            pm2 start npm --name "portfolio" -- run start
