--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,7 +78,14 @@ jobs:
             npm -v   
             pm2 -v   
 
+            echo "Accès au projet"
             cd /home/nas/portfolio
-            npm install --omit=dev
+
+            echo "Installation des dépendances "
+            npm install 
+
+            echo "Redémarrage de l'application avec PM2"
             pm2 delete portfolio || true
             pm2 start npm --name "portfolio" -- run start
+            pm2 save
+            pm2 status
