--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -85,7 +85,6 @@ jobs:
             npm install 
 
             echo "Redémarrage de l'application avec PM2"
-            pm2 delete portfolio || true
-            pm2 start npm --name "portfolio" -- run start
-            pm2 save
+
+            pm2 restart portfolio
             pm2 status
