--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          source: ".next/, package.json, package-lock.json, public/, .env"
+          source: "."
           target: "/home/nas/portfolio"
           strip_components: 1
 
@@ -85,6 +85,7 @@ jobs:
             npm install 
 
             echo "Redémarrage de l'application avec PM2"
-
-            pm2 restart portfolio
+            pm2 delete portfolio || true
+            pm2 start npm --name "portfolio" -- run start
+            pm2 save
             pm2 status
